<resources>
    <string name="app_name">Login</string>
    <string name="password_place_holder">Password</string>
    <string name="email_place_holder">Email</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="subHead">Your unique referral code</string>
    <string name="Head">58594369568739</string>
    <string name="copy">copy</string>
    <string name="FullName">Full name</string>
    <string name="tester">tester</string>
    <string name="company">Company</string>
    <string name="testingComapny">Testing company</string>
    <string name="BusinessCategory">Business Category</string>
    <string name="BusinessSubCategory">Business Sub Category</string>
    <string name="student">Students(Master Degree)</string>
    <string name="SpecialCategory">Special Category</string>
    <string name="master">Master Of Applied Science</string>
    <string name="searchPlace">searchPlace</string>
    <string name="Profile">Profile</string>
    <string name="streetAddress">Street address</string>
    <string name="streetAddressContent">Rajpura Town</string>
    <string name="BusinessPhone1">Business Phone1</string>
    <string name="BusinessPhone2">Phone2</string>
    <string name="BusinessPhone1Con">7254957457</string>
    <string name="BusinessPhone2con">9249595898</string>
    <string name="OpenTime">Open Time</string>
    <string name="CloseTime">Close Time</string>
    <string name="OpenTimeCon">10 Am</string>
    <string name="closeTimeCon">10 Pm</string>
    <string name="city">City</string>
    <string name="State">State</string>
    <string name="ZipCode">ZipCode</string>
    <string name="cityCon">Ragpura</string>
    <string name="StateCon">pengap</string>
    <string name="ZipCodeCon">7452745</string>
</resources>
