<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPge"
    android:background="@color/primaryBackColor">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="111dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/profilee"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:paddingTop="@dimen/basicPadding"
        android:paddingBottom="@dimen/basicPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basicMargin"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_place_holder"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/basicSize" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basicMargin"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_place_holder"
            android:inputType="numberPassword"
            android:textSize="@dimen/basicSize"
            android:textColorHighlight="@android:color/black"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basicMargin"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forgetPassword"
            android:textSize="@dimen/basicSize" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basicMargin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/app_name"
            android:textSize="@dimen/basicSize"
            android:textColor="@color/backcolor"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>